// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropAnchors snapshots > should render DropAnchors 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots > should render some prompt when grid for bottom 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts Prompts--bottom"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="Anchors Anchors--right"
      data-test-anchor="right"
    />
    <div
      class="Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots > should render some prompt when grid for left 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts"
    />
    <div
      class="Prompts Prompts--left"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="Anchors Anchors--right"
      data-test-anchor="right"
    />
    <div
      class="Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots > should render some prompt when grid for right 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts Prompts--right"
    />
    <div
      class="Prompts"
    />
    <div
      class="Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="Anchors Anchors--right"
      data-test-anchor="right"
    />
    <div
      class="Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots > should render some prompt when grid for top 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts Prompts--top"
    />
    <div
      class="Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="Anchors Anchors--right"
      data-test-anchor="right"
    />
    <div
      class="Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots > should render with next prompt for bottom 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts Prompts--bottom"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots > should render with next prompt for right 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts Prompts--right"
    />
    <div
      class="Prompts"
    />
    <div
      class="Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="Anchors Anchors--right"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots > should render with prev prompt for left 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts"
    />
    <div
      class="Prompts Prompts--left"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="Anchors Anchors--right"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots > should render with prev prompt for top 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors"
  >
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts"
    />
    <div
      class="Prompts Prompts--top"
    />
    <div
      class="Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;
